# sat-model-visualizer

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml  run_tests.py  sat_visualizer.py
.github/workflows/: test.yml
tests/test_1_spec_example/: execution_trace_1.txt  execution_trace_2.txt  final_model.txt  initial_cnf.txt  output.txt
tests/test_2_pure_sat/: execution_trace_1.txt  final_model.txt  initial_cnf.txt  output.txt
tests/test_3_multi_dl/: execution_trace_1.txt  execution_trace_2.txt  final_model.txt  initial_cnf.txt  output.txt
tests/test_4_two_backtracks/: execution_trace_1.txt  execution_trace_2.txt  execution_trace_3.txt  execution_trace_4.txt  final_model.txt  initial_cnf.txt  output.txt
