[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-model-visualizer"
version = "0.1.0"
description = "Three textual visualisations (Row / Inference / Tree) of a DPLL SAT-solver proof."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ceyda Akın" }]
keywords = ["sat", "dpll", "solver", "cnf", "visualization", "logic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/ceydaakin/sat-model-visualizer"
Issues = "https://github.com/ceydaakin/sat-model-visualizer/issues"

[project.scripts]
sat-visualize = "sat_visualizer:_cli_entry"

[tool.setuptools]
py-modules = ["sat_visualizer"]
